--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -1,5 +1,6 @@
+# week07/.github/workflows/backend_ci.yml
 name: Backend CI - Test, Build & Push Images
- 
+
 on:
   workflow_dispatch:
   push:
@@ -8,69 +9,80 @@ on:
     paths:
       - 'backend/**'
       - '.github/workflows/backend_ci.yml'
- 
+
+env:
+  # FQDN like: sit722week7acr.azurecr.io  (set as a repo secret)
+  ACR_FQDN: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+  # Unique tag per run (also pushes :latest)
+  IMAGE_TAG: ${{ github.sha }}-${{ github.run_id }}
+
 jobs:
-  # Job 1: Test & Lint
+  # Job 1: Test & Lint (lightweight)
   test_and_lint_backends:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
- 
-      # Example: Python backend testing
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
- 
+
       - name: Install dependencies
         run: |
-          cd backend/product_service
-          pip install -r requirements.txt || true
-          cd ../order_service
-          pip install -r requirements.txt || true
- 
+          set -e
+          cd backend/product_service && pip install -r requirements.txt || true
+          cd ../order_service && pip install -r requirements.txt || true
+
       - name: Run flake8 lint
         run: |
           pip install flake8 || true
           flake8 backend || true
- 
+
       - name: Run pytest
         run: |
           pip install pytest || true
           pytest backend || true
- 
-  # Job 2: Build & Push (depends on tests)
+
+  # Job 2: Build & Push (runs after tests)
   build_and_push_backend:
     runs-on: ubuntu-latest
-    needs: test_and_lint_backends   # only runs if tests pass
+    needs: test_and_lint_backends
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
- 
-      # Azure login (uses service principal JSON)
+
+      # Azure login with Service Principal JSON
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
- 
-      # Login to Azure Container Registry (ACR) using SHORT registry name (e.g., sit722week07acr)
+
+      # Login to ACR using the SHORT registry name derived from FQDN
       - name: Login to ACR
-        run: az acr login --name ${{ secrets.AZURE_CONTAINER_REGISTRY }}
- 
+        run: |
+          REG_NAME="${{ env.ACR_FQDN%%.* }}"   # strip ".azurecr.io"
+          echo "Logging into ACR: $REG_NAME"
+          az acr login --name "$REG_NAME"
+
       # Build & push product_service
       - name: Build and Push product_service
         run: |
-          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/product_service:latest ./backend/product_service
-          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/product_service:latest
- 
+          docker build -t ${{ env.ACR_FQDN }}/product_service:${{ env.IMAGE_TAG }} ./backend/product_service
+          docker push ${{ env.ACR_FQDN }}/product_service:${{ env.IMAGE_TAG }}
+          docker tag  ${{ env.ACR_FQDN }}/product_service:${{ env.IMAGE_TAG }} ${{ env.ACR_FQDN }}/product_service:latest
+          docker push ${{ env.ACR_FQDN }}/product_service:latest
+
       # Build & push order_service
       - name: Build and Push order_service
         run: |
-          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/order_service:latest ./backend/order_service
-          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/order_service:latest
- 
-      # Logout
+          docker build -t ${{ env.ACR_FQDN }}/order_service:${{ env.IMAGE_TAG }} ./backend/order_service
+          docker push ${{ env.ACR_FQDN }}/order_service:${{ env.IMAGE_TAG }}
+          docker tag  ${{ env.ACR_FQDN }}/order_service:${{ env.IMAGE_TAG }} ${{ env.ACR_FQDN }}/order_service:latest
+          docker push ${{ env.ACR_FQDN }}/order_service:latest
+
+      # Logout (tolerant if no active session)
       - name: Logout from Azure
         if: always()
-        run: az logout
+        run: az logout || true
