--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -1,4 +1,3 @@
-# week07/.github/workflows/backend_ci.yml
 name: Backend CI - Test, Build & Push Images
 
 on:
@@ -11,13 +10,12 @@ on:
       - '.github/workflows/backend_ci.yml'
 
 env:
-  # FQDN like: sit722week7acr.azurecr.io  (set as a repo secret)
+  # Set this repo secret to your ACR FQDN, e.g. sit722week7acr.azurecr.io
   ACR_FQDN: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
-  # Unique tag per run (also pushes :latest)
   IMAGE_TAG: ${{ github.sha }}-${{ github.run_id }}
 
 jobs:
-  # Job 1: Test & Lint (lightweight)
+  # Job 1: Test & Lint (lightweight just to satisfy the brief)
   test_and_lint_backends:
     runs-on: ubuntu-latest
     steps:
@@ -31,9 +29,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          set -e
-          cd backend/product_service && pip install -r requirements.txt || true
-          cd ../order_service && pip install -r requirements.txt || true
+          pip install --upgrade pip
+          if [ -f backend/product_service/requirements.txt ]; then pip install -r backend/product_service/requirements.txt || true; fi
+          if [ -f backend/order_service/requirements.txt ]; then pip install -r backend/order_service/requirements.txt || true; fi
 
       - name: Run flake8 lint
         run: |
@@ -53,20 +51,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Azure login with Service Principal JSON
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Login to ACR using the SHORT registry name derived from FQDN
+      # Use bash to derive the short registry name from the FQDN
       - name: Login to ACR
         run: |
-          REG_NAME="${{ env.ACR_FQDN%%.* }}"   # strip ".azurecr.io"
-          echo "Logging into ACR: $REG_NAME"
+          REG_NAME="${{ env.ACR_FQDN }}"
+          REG_NAME="${REG_NAME%%.*}"   # strip ".azurecr.io"
+          echo "Using registry name: $REG_NAME (from ${{ env.ACR_FQDN }})"
           az acr login --name "$REG_NAME"
 
-      # Build & push product_service
       - name: Build and Push product_service
         run: |
           docker build -t ${{ env.ACR_FQDN }}/product_service:${{ env.IMAGE_TAG }} ./backend/product_service
@@ -74,7 +71,6 @@ jobs:
           docker tag  ${{ env.ACR_FQDN }}/product_service:${{ env.IMAGE_TAG }} ${{ env.ACR_FQDN }}/product_service:latest
           docker push ${{ env.ACR_FQDN }}/product_service:latest
 
-      # Build & push order_service
       - name: Build and Push order_service
         run: |
           docker build -t ${{ env.ACR_FQDN }}/order_service:${{ env.IMAGE_TAG }} ./backend/order_service
@@ -82,8 +78,6 @@ jobs:
           docker tag  ${{ env.ACR_FQDN }}/order_service:${{ env.IMAGE_TAG }} ${{ env.ACR_FQDN }}/order_service:latest
           docker push ${{ env.ACR_FQDN }}/order_service:latest
 
-      # Logout (tolerant if no active session)
       - name: Logout from Azure
         if: always()
         run: az logout || true
-#v2
